fixed mobile ios extra white space on right

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
+@import "../node_modules/bulma/sass/utilities/initial-variables.sass";
 
 
 // global bulma variables
@@ -10,12 +11,13 @@ body {
     background-color: hsl(0, 0%, 96%);
 }
 
+.navbar-menu {
+    margin-right: 0 !important;
+}
 
 // custom css
 .navbar-start { // fixes is-expanded on the navbar items
     flex-grow: 1;
-    flex-shrink: 1;
-    display: flex;
     text-align: center;
 }
 
